Salesforce/main/default/main/default/objects/Planejamento_Difusao_Marketing_Item__c/fields/Planejamento_Difusao_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Planejamento_Difusao_Marketing__c</fullName>
    <label>Planejamento Difusão Marketing</label>
    <referenceTo>Planejamento_Difusao_Marketing__c</referenceTo>
    <relationshipLabel>Planejamento Difusão Marketing Itens</relationshipLabel>
    <relationshipName>Planejamento_Difusao_Marketing_Itens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>