Salesforce/main/default/main/default/objects/Planejamento_Difusao_Marketing_Item__c/fields/Valor_por_Kilo__c.field-meta.xml
<CustomField>
    <fullName>Valor_por_Kilo__c</fullName>
    <label>Valor R$/Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>